--- a/bs_blog_engine/pom.xml
+++ b/bs_blog_engine/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>bs_blog_engine</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bs_blog_engine</name>
-    <description>搜索服务</description>
+    <description>搜索</description>
 
     <properties>
         <java.version>1.8</java.version>
