--- a/bs_blog_engine/pom.xml
+++ b/bs_blog_engine/pom.xml
@@ -18,6 +18,10 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <modules>
+        <module>../bs_blog_utils</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
